# py-torrent-crawler

./: CHANGELOG.md  Makefile  README.md  constants.py  main.py  pyproject.toml  search.py
config/: dev.env
devops/container/: .dockerignore  Dockerfile
enums/: categories.py  languages.py
enums/movies/: genres.py
schemas/: date_schema.py  movie_schema.py  page_schema.py  torrent_schema.py
src/: constants.py  main.py  mmain.py  search.py
src/core/: cli.py  download.py  search.py
src/schemas/: media_schema.py  movie_schema.py  size_schema.py  torrent_schema.py
src/utils/: logger.py  requests.py  requests_utils.py
utils/: requests.py
