[tool.poetry]
name = "py-ev01-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
pydantic = "^2.11.1"
selenium = "^4.30.0"
webdriver-manager = "^4.0.2"
libtorrent = {path = "dist/libtorrent-2.0.11-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
torrentp = "^0.2.3"
tqdm = "^4.67.1"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
